# fftw3-cmake

./: CMakeLists.txt  config.h.in
api/: CMakeLists.txt
cmake/: macro.cmake
cmake/Modules/: CheckPrototypeExists.cmake
dft/: CMakeLists.txt
dft/scalar/: CMakeLists.txt
dft/scalar/codelets/: CMakeLists.txt
dft/simd/: CMakeLists.txt
dft/simd/altivec/: CMakeLists.txt
dft/simd/avx/: CMakeLists.txt
dft/simd/common/: CMakeLists.txt
dft/simd/neon/: CMakeLists.txt
dft/simd/sse2/: CMakeLists.txt
doc/: CMakeLists.txt
doc/FAQ/: CMakeLists.txt
genfft/: CMakeLists.txt
kernel/: CMakeLists.txt
libbench2/: CMakeLists.txt
m4/: CMakeLists.txt
mpi/: CMakeLists.txt
rdft/: CMakeLists.txt
rdft/scalar/: CMakeLists.txt
rdft/scalar/r2cb/: CMakeLists.txt
rdft/scalar/r2cf/: CMakeLists.txt
rdft/scalar/r2r/: CMakeLists.txt
rdft/simd/: CMakeLists.txt
rdft/simd/altivec/: CMakeLists.txt
rdft/simd/avx/: CMakeLists.txt
rdft/simd/common/: CMakeLists.txt
rdft/simd/neon/: CMakeLists.txt
rdft/simd/sse2/: CMakeLists.txt
reodft/: CMakeLists.txt
simd/: CMakeLists.txt
simd-support/: CMakeLists.txt
simd/nonportable/: CMakeLists.txt
support/: CMakeLists.txt  codlist.c.in
tests/: CMakeLists.txt  bench.c
threads/: CMakeLists.txt
tools/: CMakeLists.txt
